# data-science-utils

./: CHANGELOG.md  LICENSE  Readme.md  TAGS  cabal.project  data-science-utils.cabal  package.yaml
src/Control/: DataCache.hs
src/Data/: MapRow.hs
src/Graphics/Vegalite/: ParameterPlot.hs
src/Numeric/: ActiveSet.hs  ActuveSet.hs  Foldl.hs  NNLS.hs  NNLS_List.hs
src/Numeric/Clustering/: Perplexity.hs
src/Numeric/MCMC/: Diagnostics.hs
src/Numeric/NNLS/: IncrementalQR.hs  LH.hs  Types.hs
src/Visualization/VegaLite/: Common.hs  ParameterPlot.hs  StackedArea.hs
src/Visualization/Vegalite/: Common.hs  ParameterPlot.hs  StackedArea.hs
test/: activeSet.hs
