cabal-version:       2.2
name:                data-science-utils
version:             0.1.0.0
synopsis:            miscellaneous utilities for data-science
-- description:
homepage:            https://github.com/adamConnerSax/data-science-utils
bug-reports:         https://github.com/adamConnerSax/data-science-utils/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              adamConnerSax
maintainer:          adam_conner_sax@yahoo.com
copyright:           Adam Conner-Sax 2019
category:            Math
extra-source-files:  CHANGELOG.md

library
  exposed-modules: Numeric.MCMC.Diagnostics
                 , Graphics.VegaLite.ParameterPlot
  -- other-modules:
  -- other-extensions:
  build-depends:       base ^>=4.12.0.0,
                       array >= 0.5.0.0 && < 0.6,
                       declarative >= 0.5.1.0 && < 0.6.0.0,
                       foldl  >= 1.4.5 && < 1.5,
                       hmatrix, 
                       hvega >= 0.1.0 && <= 0.2.0.0,
                       statistics                        >= 0.15.0 && < 0.16,                       
                       text  >= 1.2.3.1 && <1.3,
                       vector
                       
                     
  hs-source-dirs:      src
  default-language:    Haskell2010
